feat: Implement SEO optimizations based on Naver guide
- Create robots.txt to allow search engine crawling.
- Create sitemap.xml to provide a site map.
- Add meta tags (description, keywords, Open Graph) to all HTML pages for better SEO and social sharing.
- Add alt attributes to images for accessibility and SEO.
- Update blueprint.md with SEO tasks.

--- a/about.html
+++ b/about.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>서비스 소개 - AI 체형 진단</title>
+    <meta name="description" content="AI 체형 진단 서비스의 개발 배경과 목표를 알아보세요. 저희는 당신의 고유한 아름다움을 발견하고 자신감을 찾도록 돕습니다.">
+    <meta name="keywords" content="AI 체형 진단, 서비스 소개, 골격 진단, 스타일링, 패션, about us">
+    <meta name="author" content="뷰스타 쪼">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mybodyshape.pages.dev/about.html">
+    <meta property="og:title" content="서비스 소개 - AI 체형 진단">
+    <meta property="og:description" content="AI 체형 진단 서비스의 개발 배경과 목표를 알아보세요.">
+    <meta property="og:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mybodyshape.pages.dev/about.html">
+    <meta property="twitter:title" content="서비스 소개 - AI 체형 진단">
+    <meta property="twitter:description" content="AI 체형 진단 서비스의 개발 배경과 목표를 알아보세요.">
+    <meta property="twitter:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MCQQV9TVKG"></script>
     <script>
