--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문의하기 - AI 체형 진단</title>
+    <meta name="description" content="AI 체형 진단 서비스에 대한 문의나 제안이 있으신가요? 이메일로 연락주세요.">
+    <meta name="keywords" content="문의, 연락, contact, AI 체형 진단, 고객센터">
+    <meta name="author" content="뷰스타 쪼">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mybodyshape.pages.dev/contact.html">
+    <meta property="og:title" content="문의하기 - AI 체형 진단">
+    <meta property="og:description" content="AI 체형 진단 서비스에 대한 문의나 제안이 있으신가요? 이메일로 연락주세요.">
+    <meta property="og:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mybodyshape.pages.dev/contact.html">
+    <meta property="twitter:title" content="문의하기 - AI 체형 진단">
+    <meta property="twitter:description" content="AI 체형 진단 서비스에 대한 문의나 제안이 있으신가요? 이메일로 연락주세요.">
+    <meta property="twitter:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MCQQV9TVKG"></script>
     <script>
