--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Body Shape Analysis</title>
+    <meta name="description" content="AI가 당신의 체형을 분석해 인생 코디를 찾아드립니다. 스트레이트, 웨이브, 내추럴 체형을 진단하고 스타일링 팁을 받아보세요.">
+    <meta name="keywords" content="체형분석, AI체형, 골격진단, 패션, 스타일링, 코디, 스트레이트, 웨이브, 내추럴">
+    <meta name="author" content="뷰스타 쪼">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mybodyshape.pages.dev/">
+    <meta property="og:title" content="AI 체형 분석 테스트">
+    <meta property="og:description" content="사진 한 장으로 내 체형을 분석하고, 어울리는 스타일을 추천받으세요!">
+    <meta property="og:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mybodyshape.pages.dev/">
+    <meta property="twitter:title" content="AI 체형 분석 테스트">
+    <meta property="twitter:description" content="사진 한 장으로 내 체형을 분석하고, 어울리는 스타일을 추천받으세요!">
+    <meta property="twitter:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
     
     <!-- 구글 애드센스 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3735666512605515" crossorigin="anonymous"></script>
@@ -176,13 +193,13 @@
         <!-- Link Group Section -->
         <div class="link-group">
             <a href="https://blog.naver.com/borareview/224158053453" target="_blank" class="link-item">
-                <img src="images/lipstick.jpg" class="link-thumb">
+                <img src="images/lipstick.jpg" class="link-thumb" alt="차무희 립스틱">
                 <span class="link-text">💄 드라마 속 차무희 립스틱 보러가기</span>
                 <div class="cta-btn-style-2">보기</div>
             </a>
 
             <a href="https://blog.naver.com/borareview" target="_blank" class="link-item">
-                <img src="images/jeans.jpg" class="link-thumb">
+                <img src="images/jeans.jpg" class="link-thumb" alt="제니 애착 청바지">
                 <span class="link-text">품절대란 제니 🔥10만원대🔥 애착 청바지</span>
                 <div class="cta-btn-style-2">보기</div>
             </a>
