--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인정보처리방침 - AI 체형 진단</title>
+    <meta name="description" content="AI 체형 진단 서비스의 개인정보처리방침입니다. 저희는 사용자의 개인정보를 소중하게 생각하며, 서버에 어떠한 정보도 저장하지 않습니다.">
+    <meta name="keywords" content="개인정보처리방침, privacy policy, AI 체형 진단, 정보보호">
+    <meta name="author" content="뷰스타 쪼">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mybodyshape.pages.dev/privacy.html">
+    <meta property="og:title" content="개인정보처리방침 - AI 체형 진단">
+    <meta property="og:description" content="AI 체형 진단 서비스의 개인정보처리방침입니다. 저희는 사용자의 개인정보를 소중하게 생각합니다.">
+    <meta property="og:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mybodyshape.pages.dev/privacy.html">
+    <meta property="twitter:title" content="개인정보처리방침 - AI 체형 진단">
+    <meta property="twitter:description" content="AI 체형 진단 서비스의 개인정보처리방침입니다. 저희는 사용자의 개인정보를 소중하게 생각합니다.">
+    <meta property="twitter:image" content="https://mybodyshape.pages.dev/images/og-image.jpg">
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MCQQV9TVKG"></script>
     <script>
