feat: Apply Generative Engine Optimization (GEO)
- Refine content on index.html and about.html to be more conversational and user-centric, following GEO principles.
- Restructure informational sections into a Q&A format.
- Update blueprint.md to include GEO strategy.

--- a/about.html
+++ b/about.html
@@ -42,24 +42,26 @@
 <body>
     <a href="index.html" class="back-link">← 메인으로 돌아가기</a>
 
-    <h1>서비스 소개 (About Us)</h1>
+    <h1>만든 사람 이야기 (About Me)</h1>
     
     <div class="intro-box">
-        <p><strong>"나에게 가장 잘 어울리는 핏은 무엇일까?"</strong></p>
-        <p>옷을 살 때마다 고민했던 이 질문에서 'AI 체형 진단' 서비스가 시작되었습니다.</p>
+        <p><strong>"이 옷, 나한테는 왜 안 어울릴까?"</strong></p>
+        <p>안녕하세요! 'AI 체형 진단' 서비스를 만든 '뷰스타 쪼'입니다. 저는 오랫동안 패션 블로그를 운영하며 수많은 옷을 입어봤지만, 늘 풀리지 않는 고민이 있었어요. 바로 이 질문이었죠.</p>
     </div>
 
-    <p>사람마다 타고난 골격과 체형은 모두 다릅니다. 하지만 유행하는 옷을 무작정 따라 입다 보면, 나의 매력을 살리지 못하고 오히려 단점이 부각되는 경험을 하게 됩니다.</p>
+    <p>분명 멋진 옷인데도 제가 입으면 어딘가 어색해 보일 때가 많았어요. 제 몸매에 문제가 있나 자책하기도 했죠. 그러다 '골격 진단'이라는 개념을 알게 되었고, 유레카를 외쳤습니다!</p>
 
-    <p>저희 서비스는 최신 인공지능(AI) 기술과 전통적인 골격 진단 이론을 결합하여, 누구나 쉽고 빠르게 자신의 체형 타입을 파악할 수 있도록 돕습니다.</p>
+    <p>사람마다 타고난 골격, 즉 '바디 프레임'이 모두 다르다는 것. 그리고 그 프레임에 맞는 옷을 입었을 때 비로소 가장 멋져 보인다는 사실을요. 이 인사이트를 다른 사람들과도 나누고 싶었어요.</p>
 
-    <h3>우리의 목표</h3>
+    <h3>제가 꿈꾸는 것</h3>
+    <p>저는 이 서비스가 여러분에게 이런 경험을 선물했으면 좋겠습니다.</p>
     <ul>
-        <li>복잡한 전문가 상담 없이도 자신의 체형을 이해하도록 돕습니다.</li>
-        <li>단순한 유형 분류를 넘어, 실생활에 적용 가능한 스타일링 팁을 제공합니다.</li>
-        <li>개인의 고유한 아름다움을 발견하고 자신감을 가질 수 있도록 응원합니다.</li>
+        <li>비싼 돈 들여 컨설팅 받지 않아도, 내 체형을 쉽고 재미있게 이해하는 경험.</li>
+        <li>'스트레이트 타입은 V넥!' 같은 단순한 공식을 넘어, 내 매력을 살리는 스타일링 원리를 깨닫는 경험.</li>
+        "        <li>더 이상 쇼핑에 실패하지 않고, 내 옷장을 '인생템'으로만 채워가는 즐거움.</li>
+"
     </ul>
 
-    <p>지금 바로 당신만의 인생 핏을 찾아보세요!</p>
+    <p>이제 여러분도 자신만의 '인생 핏'을 찾아, 매일 더 빛나는 하루를 보내시길 진심으로 응원합니다!</p>
 </body>
 </html>
