refactor: Address 'no publisher content' rejection
This commit further refines the website's content and structure to address Google AdSense's 'no publisher content' rejection.

- **index.html Restructuring:** Moved the detailed body type information and FAQ sections to be statically visible on page load, ensuring content is immediately available to crawlers.
- **Enhanced Policy Pages:** Added more descriptive content to , , and  to increase their perceived value and comprehensiveness. This includes a 'Future Vision' section in , a concluding remark in  and .

This aims to provide robust, accessible content across the site, improving AdSense approval chances.

--- a/about.html
+++ b/about.html
@@ -52,6 +52,17 @@
             <h2>Our Commitment to Privacy</h2>
             <p>저희는 사용자의 신뢰를 가장 소중한 가치로 생각합니다. MyBodyShape는 사용자의 사진을 포함한 어떠한 개인 식별 정보도 서버에 저장하지 않을 것을 약속합니다. 모든 분석은 투명하고 안전하게 사용자의 기기 안에서만 이루어집니다. 자세한 내용은 <a href="privacy.html">개인정보처리방침</a>을 참고해주시기 바랍니다.</p>
         </div>
+
+        <div class="section" id="future">
+            <h2>Future Vision: 더 나은 당신의 스타일을 위해</h2>
+            <p>MyBodyShape는 여기서 멈추지 않을 것입니다. 저희는 앞으로 다음과 같은 기능들을 통해 더욱 발전된 서비스를 제공하고자 합니다.</p>
+            <ul>
+                <li><strong>퍼스널 컬러 진단:</strong> 사용자의 피부 톤을 분석하여 가장 잘 어울리는 색상 팔레트를 추천하는 기능을 추가할 계획입니다.</li>
+                <li><strong>패션 아이템 추천:</strong> 분석된 체형과 퍼스널 컬러를 바탕으로, 실제 구매할 수 있는 쇼핑몰의 패션 아이템을 추천하는 기능을 구상 중입니다.</li>
+                <li><strong>커뮤니티 기능:</strong> 같은 체형을 가진 사용자들끼리 스타일링 팁을 공유하고 소통할 수 있는 커뮤니티 공간을 마련하여 패션 정보의 허브가 되는 것을 목표로 합니다.</li>
+            </ul>
+            <p>여러분의 지속적인 관심과 응원이 저희에게는 큰 힘이 됩니다. MyBodyShape와 함께 더 멋진 내일을 만들어가요!</p>
+        </div>
     </div>
 </body>
 </html>
