--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,8 @@
         </div>
 
         <p class="response-time">※ 보내주신 문의는 평일 기준 24시간 이내에 답변 드리기 위해 노력하고 있습니다. (영업일 기준 09:00 - 18:00)</p>
+
+        <p style="margin-top: 30px; text-align: center; font-size: 1em;">MyBodyShape는 사용자와의 소통을 통해 성장합니다.<br>보내주시는 모든 의견을 귀담아듣고 더 나은 서비스를 만들기 위해 최선을 다하겠습니다.</p>
     </div>
 </body>
 </html>
