--- a/privacy.html
+++ b/privacy.html
@@ -85,6 +85,8 @@
 
         <h2>8. 고지의 의무</h2>
         <p class="policy-update">현 개인정보처리방침 내용 추가, 삭제 및 수정이 있을 시에는 개정 최소 7일전부터 홈페이지의 '공지사항'을 통해 고지할 것입니다.</p>
+
+        <p style="margin-top: 30px;">본 개인정보처리방침은 사용자가 언제나 쉽게 확인할 수 있도록 항상 공개되어 있으며, MyBodyShape는 사용자의 정보 보호를 위해 최선을 다할 것을 약속합니다.</p>
     </div>
 </body>
 </html>
