fix: Update Teachable Machine MODEL_URL with specific ID
Updated the MODEL_URL in index.html to use the specific model ID 'UhOl-udOb' provided by the user. This ensures the correct AI model is loaded from Teachable Machine's hosted service for the body shape analysis.

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         document.getElementById('info-desc4').innerHTML = t.infoDesc4;
     }
 
-    const MODEL_URL = "./my_model/"; 
+    const MODEL_URL = "https://teachablemachine.withgoogle.com/models/UhOl-udOb/"
     let model = null; // Initialize model as null
     let aiData = { S: 0, N: 0, C: 0 }, surveyData = { S: 0, N: 0, C: 0 };
     let currentGender = 'female';
